style: fixed cramped comments on mobile

--- a/client/src/pages/SinglePost/Rating/Rating.css
+++ b/client/src/pages/SinglePost/Rating/Rating.css
@@ -15,3 +15,9 @@
   text-align: center;
   width: 2rem;
 }
+
+@media (max-width: 500px) {
+  .rating-text {
+    width: 1.5rem;
+  }
+}
